Add media previews and local phone controller
